tests/invalid/missing_function_brace.ar
fn main() {
    let i: usize;
